--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -1,25 +1,40 @@
-﻿@model dog_club.Models.LoginModel
+﻿@model dog_club.Models.User
+
+@{
+    Layout = "_Layout";
+}
 
 
 <h2>Вход на сайт</h2>
 
-<form asp-anti-forgery="true" asp-action="Login" asp-controller="Auth">
-    @*<div class="validation" asp-validation-summary="ModelOnly"></div>*@
-    <div>
-        <div class="form-group">
-            <label asp-for="UserName">Введите Логин</label>
-            <input type="text" asp-for="UserName" />
-            <span asp-validation-for="UserName"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Password">Введите пароль</label>
-            <input type="password" asp-for="Password" />
-            <span asp-validation-for="Password"></span>
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Войти" class="btn btn-outline-dark" />
-        </div>
+<form method="post" asp-anti-forgery="true" asp-action="Login" asp-controller="Auth">
+    <div class="validation" asp-validation-summary="ModelOnly"></div>
+
+    <div class="mb-3">
+        <label asp-for="userName" class="form-label">Введите Логин</label>
+        <input type="text" name="userName" asp-for="userName" class="form-control" required>
     </div>
+    <div class="mb-3">
+        <label asp-for="password" for="password" class="form-label">Введите пароль</label>
+        <input asp-for="password" type="password" name="password" class="form-control" id="password" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Войти</button>
+    @*<div class="validation" asp-validation-summary="ModelOnly"></div>
+        <div>
+            <div class="form-group">
+                <label asp-for="UserName">Введите Логин</label>
+                <input type="text" asp-for="UserName" />
+                <span asp-validation-for="UserName"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password">Введите пароль</label>
+                <input type="password" asp-for="Password" />
+                <span asp-validation-for="Password"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Войти" class="btn btn-outline-dark" />
+            </div>
+        </div>*@
 </form>
 
 @*
