--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,16 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="mainCarousel" class="carousel slide">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="~/img/main-slide/1.jpg" class="d-block w-100" alt="Награды">
+        </div>
+        <div class="carousel-item">
+            <img src="~/img/main-slide/2.jpg" class="d-block w-100" alt="Победители">
+        </div>
+        <div class="carousel-item">
+            <img src="~/img/main-slide/3.jpg" class="d-block w-100" alt="Объявление">
+        </div>
+    </div>
 </div>
