--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -1,8 +1,6 @@
 ﻿@model dog_club.Models.User
 
-@{
-    Layout = "_Layout";
-}
+@{ Layout = "_Layout"; }
 
 
 <h2>Вход на сайт</h2>
@@ -11,38 +9,22 @@
     <div class="validation" asp-validation-summary="ModelOnly"></div>
 
     <div class="mb-3">
-        <label asp-for="userName" class="form-label">Введите Логин</label>
+        <label asp-for="userName" class="form-label">Логин</label>
         <input type="text" name="userName" asp-for="userName" class="form-control" required>
     </div>
     <div class="mb-3">
-        <label asp-for="password" for="password" class="form-label">Введите пароль</label>
-        <input asp-for="password" type="password" name="password" class="form-control" id="password" required>
+        <label asp-for="password" class="form-label">Пароль</label>
+        <input asp-for="password" type="password" name="password" class="form-control" required>
     </div>
     <button type="submit" class="btn btn-primary">Войти</button>
-    @*<div class="validation" asp-validation-summary="ModelOnly"></div>
-        <div>
-            <div class="form-group">
-                <label asp-for="UserName">Введите Логин</label>
-                <input type="text" asp-for="UserName" />
-                <span asp-validation-for="UserName"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password">Введите пароль</label>
-                <input type="password" asp-for="Password" />
-                <span asp-validation-for="Password"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Войти" class="btn btn-outline-dark" />
-            </div>
-        </div>*@
 </form>
 
 @*
-    @section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }
-*@
+        @section Scripts {
+            @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+        }
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>*@
