--- a/Pages/Shared/_menuProfile.cshtml
+++ b/Pages/Shared/_menuProfile.cshtml
@@ -13,9 +13,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/roles">Роли</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users">Пользователи</a>
+                    </li>
                 }
                 <li class="nav-item">
                     <a class="nav-link" href="/owners">Владельцы</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/groups">Группы (Классификация)</a>
                 </li>
             </ul>
         </div>
