--- a/Pages/Shared/_menuProfile.cshtml
+++ b/Pages/Shared/_menuProfile.cshtml
@@ -23,6 +23,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/groups">Группы (Классификация)</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/breeds">Породы</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/rewards">Награды</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/dogs">Собаки</a>
+                </li>
             </ul>
         </div>
     </div>
