--- a/Views/Dogs/Index.cshtml
+++ b/Views/Dogs/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout";
     @Html.Partial("_menuProfile")
 }
-12345
+
 <table class="table">
 
     <thead>
@@ -13,7 +13,12 @@
             <th scope="col">ID</th>
             <th scope="col">Кличка</th>
             <th scope="col">Пол</th>
+            <th scope="col">Порода</th>
+            <th scope="col">Владелец</th>
+            <th scope="col">ID Матери</th>
+            <th scope="col">ID Отеца</th>
             <th scope="col">Дата рождения</th>
+            <th scope="col">Дата смерти</th>
             <th scope="col"></th>
             <th scope="col"><button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Create", "Dogs")'"><i class="fas fa-plus-circle" title="Добавить запись"></i></button></th>
         </tr>
@@ -23,22 +28,27 @@
         @{
         foreach (var dog in Model)
         {
-            <tr>
-                <th scope="row">@dog.id</th>
-                <td>@dog.name</td>
-                <td>@dog.gender</td>
-                <td>@dog.dateBirth</td>
-                <td>
-                    <button type="button" class="btn btn-light" onclick="location.href='@Url.Action("Edit", "Dogs", new { id = dog.id })'">
-                        <i class="fas fa-pencil-alt text-primary" title="Редактировать запись"></i>
-                    </button>
-                </td>
-                <td>
-                    <button type="button" class="btn btn-light" onclick="location.href='@Url.Action("Delete", "Dogs", new { id = dog.id })'">
-                        <i class="fas fa-trash-alt text-danger" title="Удалить запись"></i>
-                    </button>
-                </td>
-            </tr>
+                <tr>
+                    <th scope="row">@dog.id</th>
+                    <td>@dog.name</td>
+                    <td>@dog.gender</td>
+                    <td>@dog.Breed.nameBreed</td>
+                    <td>@dog.Owner.fullName</td>
+                    <td>@dog.MotherId</td>
+                    <td>@dog.FatherId</td>
+                    <td>@dog.dateBirth</td>
+                    <td>@dog.dateDeath</td>
+                    <td>
+                        <button type="button" class="btn btn-light" onclick="location.href='@Url.Action("Edit", "Dogs", new { id = dog.id })'">
+                            <i class="fas fa-pencil-alt text-primary" title="Редактировать запись"></i>
+                        </button>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-light" onclick="location.href='@Url.Action("Delete", "Dogs", new { id = dog.id })'">
+                            <i class="fas fa-trash-alt text-danger" title="Удалить запись"></i>
+                        </button>
+                    </td>
+                </tr>
         }
         }
     </tbody>
