--- a/Views/Rewards/Create.cshtml
+++ b/Views/Rewards/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model dog_club.Models.Reward
+﻿@using dog_club.Models
+@model IEnumerable<Dog>
 
 @{
     Layout = "_Layout";
@@ -16,6 +17,18 @@
     <div class="mb-3">
         <label asp-for="date" class="form-label">Дата получения</label>
         <input type="date" name="date" asp-for="date" class="form-control" required>
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="DogId" class="form-label">Собака</label>
+        <select class="form-select" name="DogId" required>
+            @{
+                foreach (Dog dog in Model)
+                {
+                        <option value="@dog.id">@dog.name (@dog.id)</option>
+                }
+            }
+        </select>
     </div>
 
     <button type="submit" class="btn btn-primary">Добавить</button>
