--- a/Views/Rewards/Delete.cshtml
+++ b/Views/Rewards/Delete.cshtml
@@ -24,6 +24,13 @@
         <input type="date" name="date" asp-for="date" class="form-control" value="@Model.date" disabled>
     </div>
 
+    <div class="mb-3">
+        <label asp-for="DogId" class="form-label">Собака</label>
+        <select class="form-select" name="DogId" disabled>
+            <option value="@Model.DogId" selected>@Model.Dog.name (@Model.DogId)</option>
+        </select>
+    </div>
+
     <div>
         <div class="row justify-content-md-center">
             <div class="col col-lg-2">
