--- a/Views/Breeds/Delete.cshtml
+++ b/Views/Breeds/Delete.cshtml
@@ -6,7 +6,7 @@
     @Html.Partial("_menuProfile")
 }
 <h2>Вы точно хотите удалить?</h2>
-<h2>После удаления данноую пароду нельзя будет восстановить</h2>
+<h2>После удаления данноую породу нельзя будет восстановить</h2>
 <form method="post">
 
     <div class="mb-3">
