--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -24,14 +24,6 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                    </ul>
 
                     <ul class="navbar-nav flex-grow-1">
                         @if (HttpContextAccessor.HttpContext.Request.Cookies.ContainsKey(".AspNetCore.Cookies"))
@@ -63,7 +55,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - dog_club - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - dog_club
         </div>
     </footer>
 
