--- a/Views/Breeds/Create.cshtml
+++ b/Views/Breeds/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout";
     @Html.Partial("_menuProfile")
 }
-<h2>Добавление новой пароды </h2>
+<h2>Добавление новой породы </h2>
 <form method="post">
     <div class="validation" asp-validation-summary="ModelOnly"></div>
 
